# Multi-LLM-Orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIGACHAT_QUESTIONS.md  IMPLEMENTATION_PLAN_v0.7.0.md  IMPLEMENTATION_SUMMARY_v0.7.0.md  README.md  STRATEGY.md  env.example  plan.md  plan1.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  plan7.md  plan8.md  pyproject.toml  review.md  test_real_gigachat.py  test_real_router.py
.github/workflows/: publish.yml
docs/: architecture.md  observability.md
docs/providers/: custom_provider.md  gigachat.md  ollama.md  yandexgpt.md
examples/: .env.example  langchain_demo.py  langchain_streaming_demo.py  prometheus_demo.py  routing_demo.py  simple_chat.py  streaming_demo.py  yandexgpt_demo.py
examples/real_tests/: README_v070.md  test_fallback.py  test_gigachat.py  test_metrics_real.py  test_router.py  test_streaming_real.py  test_stress.py  test_v070_observability.py  test_yandex.py
src/orchestrator/: __init__.py  config.py  langchain.py  router.py
src/orchestrator/providers/: __init__.py  base.py  gigachat.py  mock.py  yandexgpt.py
tests/: conftest.py  test_base_provider.py  test_gigachat_provider.py  test_integration.py  test_langchain_compat.py  test_metrics.py  test_mock_provider.py  test_ollama_provider.py  test_pricing.py  test_router.py  test_streaming.py  test_tokenization.py  test_yandexgpt_provider.py
