[tool.poetry]
name = "multi-llm-orchestrator"
version = "0.1.0"
description = "A unified interface for orchestrating multiple LLM providers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "orchestrator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
asyncio_mode = "auto"
